# nemo-agent-toolkit-book

./: .gitignore  README.md  pyproject.toml
ch03-hello-agent/: .env.example  README.md  docker-compose.yml  workflow.yml
ch05-builtin-tools/: README.md  docker-compose.yml  workflow.yml
ch06-agent-patterns/: README.md  docker-compose.yml  workflow-rewoo.yml  workflow-tool-calling.yml
ch07-phoenix/: README.md  docker-compose.yml  workflow.yml
ch08-mcp/: README.md  docker-compose.yml  workflow.yml
ch09-rag-milvus/: README.md  docker-compose.yml  workflow.yml
ch09-rag-milvus/scripts/: ingest.py
ch10-rag-operations/: README.md  docker-compose.yml  workflow.yml
ch11-multi-agent/: .env.example  README.md  docker-compose.yml  workflow.yml
ch12-a2a/: README.md  docker-compose.yml  main-agent.yml  rag-agent.yml
ch12-a2a/scripts/: ingest.py
ch13-nat-eval/: docker-compose.yml  workflow.yml
ch13-nat-eval/dataset/: nat-qa-20.jsonl
ch14-nat-serve/: README.md  docker-compose.yml
ch15-final/: README.md  docker-compose.yml  main-agent.yml  rag-agent.yml
datasets/nat-docs/: NOTICE.md  a2a-client.md  a2a-server.md  about-running-workflows.md  embedders.md  evaluate.md  fastmcp-server.md  index.md  installation.md  mcp-client.md  mcp-server.md  memory.md  nat-readme.md  optimizer.md  profiler.md  sizing-calc.md  workflow-configuration.md
docker/nat/: Dockerfile  requirements.txt
scripts/: generate_cover.py
